Updating Navigation bar of all pages using JavaScript

--- a/roles-pricing.html
+++ b/roles-pricing.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="services.html">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="roles-pricing.html">Roles & Pricing</a>
+                    <a class="nav-link" href="roles-pricing.html">Roles & Pricing</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="book-now.html">Book Now</a>
