--- a/book-now.html
+++ b/book-now.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="roles-pricing.html">Roles & Pricing</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="book-now.html">Book Now</a>
+                    <a class="nav-link" href="book-now.html">Book Now</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
