--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="book-now.html">Book Now</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
