--- a/web-development.html
+++ b/web-development.html
@@ -55,7 +55,7 @@
         </div>
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 package-box">
                     <div class="col-package">
                         <h3 class="display-6">URLinks by JJC</h3>
                         <h3 class="display-6"></h3>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 order-2">
+                <div class="col-md-4 order-2 package-box">
                         <div class="col-package-active">
                             <h3 class="display-6">Complete Professional Website Package</h3>
                             <img class="package-img" src="./img/web-package/web-package-3.png" alt="">
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                 </div>
-                <div class="col-md-4 order-5">
+                <div class="col-md-4 order-5 package-box">
                     <div class="col-package">
                         <h3 class="display-6">Complete Professional Website Package</h3>
                         <img class="package-img" src="./img/web-package/web-package-2.png" alt="">
@@ -116,38 +116,10 @@
           </div>
     </div> <!--End of Container-->
         <div class="row" id="ready-to-grow"> <!--Start of Footer Section-->
-            <div class="col"></div>
-            <div class="col-md-6">
-                <h3>Ready to grow</h3>
-                <h1>Get your free quote today</h1>
-                    <form action="#">
-                        <div class="form-floating mb-3">
-                            <input type="url" class="form-control" id="web-url" placeholder="Web URL" required>
-                            <label for="web-url">Web URL</label>
-                        </div>
-                        <div class="form-floating">
-                            <input type="email" class="form-control" id="email" placeholder="Email" required>
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary" type="submit">Submit Now</button>
-                          </div>
-                    </form>
-            </div>
-            <div class="col"></div>
+            
         </div> 
             <footer>
-                <div class="row">
-                    <div class="col-lg-4">
-                    <p>Copyright &copy 2024</p>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Metro Manila, Philippines</p>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>+639668338043</p>
-                    </div>
-                </div>
+                
             </footer> <!--End of Footer Section-->
             <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
