--- a/contact.html
+++ b/contact.html
@@ -93,10 +93,9 @@
       <div class="row">
         <h1 class="display-4">Message Us</h1> 
       </div>
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
         <form class="book-now-form" action="messege-now-action.php">
+        <div class="row">
+          <div class="col-md-6">
             <label for="first-name">Name: </label>
                 <div class="input-group">
                     <span class="input-group-text">First Name</span>
@@ -117,8 +116,10 @@
                 <div class="form-div-100">
                     <input type="number" id="phone-number" name="phone-number" required>
                 </div>
-            </div>  
-            <label for="subject">Subject: </label>
+            </div> 
+          </div>
+          <div class="col-md-6"> 
+            <label for="subject" class="subject">Subject: </label>
             <div class="form-element-wrapper">
                 <div class="form-div-100">
                     <input type="text" id="subject" name="subject"  required>
@@ -126,15 +127,14 @@
             </div>         
             <label for="book-message">Type your message here</label>
             <div class="form-element-wrapper">
-                <textarea name="book-message" id="book-message" cols="30" rows="10"></textarea>
+                <textarea name="book-message" id="book-message" cols="30" rows="8"></textarea>
             </div>
             <div class="form-element-wrapper col-md-12">
                 <input class="link-btn" type="submit" value="Submit">
             </div>
-        </form>
+          </div>
         </div>
-        <div class="col-md-3"></div>
-      </div>
+        </form>
     </div> <!--End of container-->
     <!-- ------------------------------------------------ -->
     <div class="row" id="ready-to-grow"> <!--Start of Footer Section-->
