--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
             </div>
             <div class="col-md-4">
                 <div class="p-box1 p-box">
-                    <img class="services-img" src="./img/services/content Marketing.png" alt="">
+                    <img class="services-img" src="./img/services/content-marketing.png" alt="">
                     <h3>Content Marketing</h3>
                     <p class="p-description">Content marketing is a form of marketing focused on creating, publishing, and distributing content for a targeted audience online.</p>
                 </div>
